[package]
name = "gzip-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deflate = "1.0"
crc32fast = "1.3"
inflate = "0.4"
flate2 = "1.0"
atty = "0.2"

[package.metadata.cargo-test-options]
test-threads = 1
